# stable_diffusion_kanji_generator

./: .cursorrules  .gitignore  README.md  o1-mini-instructions.md  pyproject.toml
cache/"/models--helenai--runwayml-stable-diffusion-v1-5-ov/refs/: main
config/: __init__.py
configs/: train_config.yaml  yaml_step_executor.py
docs/: Recommendations.md  o1-mini-instructions.md
scripts/: decompress_data.py  generate_image.py  preprocess_config.yaml  preprocess_data.py  train_model.py
src/data_preprocessing/: __init__.py  dataset_builder.py  decompress_data.py  kanjidic_parser.py  svg_to_pixel.py
src/data_processing/: dataset_builder.py  kanjidic_parser.py  svg_to_pixel.py
src/model/: training.py
src/utils/: logger.py  logger_config.yaml
utils/: logger.py  logger_config.yaml
