[tool.poetry]
name = "stable-diffusion-kanji-generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
transformers = "^4.44.2"
diffusers = "^0.30.2"
pillow = "^10.4.0"
numpy = "^2.1.1"
pycairo = "^1.20.1"
svglib = "^1.5.1"
cairosvg = "^2.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
